Fix tag highlighting/clearing not showing, after switching to list structure

--- a/src/app/modules/browse/browse.less
+++ b/src/app/modules/browse/browse.less
@@ -153,16 +153,16 @@ li .bookInfo {
   .clear {
     visibility: hidden;
   }
-  div.activeFilter a {
+  .activeFilter a {
     color: @bloomRed;
   }
-  div.activeFilter .clear {
+  .activeFilter .clear {
     visibility: visible;
   }
-  div.activeFilter a.clear {
+  .activeFilter a.clear {
     color: @lightGray;
   }
-  div.childShelf {
+  .childShelf {
     margin-left: 1em;
     .orgName {
       font-size: smaller;
